[package]
name = "ra8835a-example"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
ra8835a = { path = "../../" }

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411"]

[profile.dev]
panic="abort"

[[bin]]
name = "ra8835a-example"
path = "src/main.rs"
test = false
bench = false
